# spyscammer-gcp

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: __main__.py  application.py
app/configs/: auth.py  connection.py  lifetime.py  settings.py
app/models/: model.py
app/repository/: base.py  member_tools_repository.py  members_repository.py
app/router/: web_menber_tools.py  web_menbers.py
app/schemas/: member_schema.py  member_tools_schema.py
app/service/: service_member_tools.py  service_members.py
app/static/css/: material-dashboard.css  nubank.css  style.css  style_get_password.css  style_home.css  style_login.css
app/static/imagens/: background.psd  logo-pix.png:Zone.Identifier  picpay-1.png:Zone.Identifier
app/static/js/: message_alert_register.js  messagem_alert_sleep.js  script.js
app/templates/member/: _base.html  forgot_password.html  index.html  login.html  register.html
app/templates/member-admin/: _base.html  captures.html  icons.html  map.html  notifications.html  tables.html  typography.html  upgrade.html  user.html
app/templates/member-admin (copy 1)/: dash-admin.html  icons.html  map.html  notifications.html  tables.html  typography.html  upgrade.html  user.html
app/templates/old-templates/: admin-old.html  forgot_password-old.html  index-old.html  instagram-old.html  login-old.html  nubank-old.html  pos_register.html  register-old.html
app/templates/pages-bank/: picpay.html
app/utils/: payload_adjusts.py
(+5 files in other folders)
