[tool.poetry]
name = "spy-scammer"
version = "0.1.0"
description = ""
authors = ["william Ferrari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.4"
pydantic-settings = "^2.2.1"
python-multipart = "^0.0.9"
aiofile = "^3.8.8"
mongoengine = "^0.28.2"
fastapi-login = "^1.10.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
